# chromasync

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  book.toml
.github/: VOUCHED.td
.github/workflows/: ci.yml  pages.yml  release.yml  vouch-manage.yml  vouch-pr.yml
book/src/: SUMMARY.md  index.md
book/src/guides/: batch.md  generate.md  mcp.md  packs.md  preview.md  targets.md  templates.md  tokens.md  wallpaper.md
book/src/reference/: packaging.md  product.md
crates/chromasync-cli/: Cargo.toml
crates/chromasync-cli/src/: lib.rs  main.rs
crates/chromasync-cli/tests/: smoke.rs
crates/chromasync-color/: Cargo.toml
crates/chromasync-color/src/: lib.rs
crates/chromasync-color/tests/fixtures/: seed_4ecdc4_dark.json  seed_ff6b6b_dark.json
crates/chromasync-core/: Cargo.toml
crates/chromasync-core/src/: lib.rs  packs.rs
crates/chromasync-core/tests/: perf.rs
crates/chromasync-docs/: Cargo.toml
crates/chromasync-docs/src/: main.rs
crates/chromasync-extract/: Cargo.toml
crates/chromasync-extract/src/: lib.rs
crates/chromasync-extract/tests/: extract.rs
crates/chromasync-extract/tests/fixtures/: wallpaper-blocks.ppm  wallpaper-monochrome.ppm  wallpaper-noisy.ppm
crates/chromasync-mcp/: Cargo.toml
crates/chromasync-mcp/src/: convert.rs  lib.rs  main.rs  params.rs  tools.rs
crates/chromasync-renderers/: Cargo.toml
crates/chromasync-renderers/src/: alacritty.rs  kitty.rs  lib.rs  registry.rs
crates/chromasync-renderers/tests/: golden.rs  registry.rs
crates/chromasync-renderers/tests/fixtures/: alacritty.toml.golden  foot.ini.golden  ghostty.colors.golden  gtk.css.golden  hyprland.conf.golden  kitty.conf.golden  style.css.golden  theme.css.golden  theme.json.golden
crates/chromasync-template/: Cargo.toml
crates/chromasync-template/src/: lib.rs
crates/chromasync-template/tests/: snapshots.rs
crates/chromasync-template/tests/fixtures/: builtin-template-tokens.golden.json
crates/chromasync-types/: Cargo.toml
crates/chromasync-types/src/: lib.rs
examples/: README.md
examples/targets/: css.toml  editor.toml  foot.toml  ghostty.toml  gtk.toml  hyprland.toml  waybar.toml  zed.toml
examples/templates/: editor-dark.toml  editor-light.toml
schemas/: batch.json  batch.toml  pack.json  pack.toml  target.json  target.toml  template.json  template.toml
templates/: brutalist-dark.toml  brutalist-light.toml  materialish-dark.toml  materialish-light.toml  minimal-dark.toml  minimal-light.toml  terminal-dark.toml  terminal-light.toml
