[workspace]
members = ["crates/*"]
default-members = ["crates/chromasync-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
assert_cmd = "2.2.0"
clap = { version = "4.6.0", default-features = false, features = ["derive", "help", "std", "usage"] }
clap_complete = "4"
directories = "6.0.0"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp"] }
owo-colors = "4.3.0"
palette = { version = "0.7.6", default-features = false, features = ["std"] }
predicates = "3.1.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rmcp = { version = "1", features = ["server", "transport-io"] }
schemars = "1"
thiserror = "2.0.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.9.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
panic = "abort"
strip = "symbols"
