[package]
name = "chromasync-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "chromasync"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chromasync-core = { path = "../chromasync-core" }
chromasync-types = { path = "../chromasync-types" }
clap.workspace = true
clap_complete = { workspace = true }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
