[package]
name = "chromasync-mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "chromasync-mcp"
path = "src/main.rs"

[dependencies]
chromasync-core = { path = "../chromasync-core" }
chromasync-types = { path = "../chromasync-types" }
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
