[package]
name = "chromasync-template"
version.workspace = true
edition.workspace = true

[dependencies]
chromasync-color = { path = "../chromasync-color" }
chromasync-types = { path = "../chromasync-types" }
directories.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
